--- a/02.calendar/package.json
+++ b/02.calendar/package.json
@@ -7,5 +7,9 @@
     "eslint": "^8.24.0",
     "eslint-config-prettier": "^8.5.0",
     "prettier": "^2.7.1"
+  },
+  "dependencies": {
+    "dayjs": "^1.11.7",
+    "minimist": "^1.2.8"
   }
 }
